<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.uispec4j</groupId>
  <version>17-SNAPSHOT</version>
  <artifactId>uispec4j</artifactId>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>7.4.0</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>9.2</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-util</artifactId>
      <version>9.2</version>
      <optional>true</optional>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <!-- Project Information -->
  <name>uispec4j</name>
  <description>Java/Swing GUI testing made simple!</description>
  <url>https://www.uispec4j.org</url>
  <inceptionYear>2004</inceptionYear>
  <licenses>
    <license>
      <name>Common Public License</name>
      <url>https://opensource.org/licenses/cpl1.0.php</url>
      <distribution>manual</distribution>
    </license>
  </licenses>
  <mailingLists>
    <mailingList>
      <name>UISpec4J discussion group</name>
      <subscribe>uispec4j-subscribe@yahoogroups.com</subscribe>
      <unsubscribe>uispec4j-unsubscribe@yahoogroups.com</unsubscribe>
      <archive>https://groups.yahoo.com/group/uispec4j/</archive>
    </mailingList>
  </mailingLists>
  <developers>
    <developer>
      <name>Regis Medina</name>
      <id>rmedina</id>
      <email>regis DOT medina AT design-up DOT com</email>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <name>Boris Gonnot</name>
      <id>gonnot</id>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <name>Pascal Pratmarty</name>
      <id>ppratmarty</id>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <name>Sebastien Crego</name>
      <id>scrego</id>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <name>Sylvain Rousseau</name>
      <id>sroussea</id>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <name>Marc Guiot</name>
      <id>mguiot</id>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <name>Thomas Santana</name>
      <id>nebulorum</id>
      <timezone>-3</timezone>
    </developer>
  </developers>

  <scm>
    <url>https://github.com/UISpec4J/UISpec4J</url>
    <connection>scm:git:git://github.com/UISpec4J/UISpec4J.git</connection>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <!-- Build Settings -->
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <encoding>UTF-8</encoding>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>java.desktop/java.awt.peer=uispec4j</arg>
            <arg>--add-exports</arg>
            <arg>java.desktop/java.awt.dnd.peer=uispec4j</arg>

            <arg>--add-exports</arg>
            <arg>java.desktop/sun.awt=uispec4j</arg>
            <arg>--add-exports</arg>
            <arg>java.desktop/sun.awt.image=uispec4j</arg>
            <arg>--add-exports</arg>
            <arg>java.desktop/sun.awt.datatransfer=uispec4j</arg>

            <arg>--add-exports</arg>
            <arg>java.desktop/sun.java2d.pipe=uispec4j</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <systemProperties>
            <property>
              <name>uispec4j.test.library</name>
              <value>junit</value>
            </property>
          </systemProperties>
          <redirectTestOutputToFile>true</redirectTestOutputToFile>
          <forkCount>1</forkCount>
          <reuseForks>true</reuseForks>
          <threadCount>1</threadCount>
          <parallel>methods</parallel>
          <forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
          <rerunFailingTestsCount>1</rerunFailingTestsCount>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>jdk17</id>
      <activation>
        <!-- <jdk>17</jdk> -->
        <activeByDefault/>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
              <execution>
                <configuration>
                  <classifier>jdk17</classifier>
                </configuration>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>build-helper-maven-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
              <execution>
                <id>add-specific-source</id>
                <goals>
                  <goal>add-source</goal>
                </goals>
                <configuration>
                  <sources>
                    <source>${basedir}/src/main/java-jdk17</source>
                  </sources>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>ci-headless</id>
      <dependencies>
        <dependency>
          <groupId>net.java.openjdk.cacio</groupId>
          <artifactId>cacio-tta</artifactId>
          <version>1.9</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <systemPropertyVariables>
                <java.awt.headless>false</java.awt.headless>
                <awt.toolkit>net.java.openjdk.cacio.ctc.CTCToolkit</awt.toolkit>
                <java.awt.graphicsenv>net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment</java.awt.graphicsenv>
              </systemPropertyVariables>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.2.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.3.0</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.0.1</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.8</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>ossrh</serverId>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>false</autoReleaseAfterClose>
              <skipStagingRepositoryClose>true</skipStagingRepositoryClose>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
